--- a/assets/scss/helper/_mixins.scss
+++ b/assets/scss/helper/_mixins.scss
@@ -29,7 +29,7 @@
   height: 0px;
   border-style: solid;
   border-width: 7px 5px 0 5px;
-  border-color: $dark transparent transparent transparent;
+  border-color: $color transparent transparent transparent;
   transform: rotate(0deg);
   position: absolute;
   top: 14px;
